--- a/roadmap.css
+++ b/roadmap.css
@@ -56,6 +56,20 @@ body {
 
 
 
+.site-header {
+	padding-top:30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+  background: rgba(0, 0, 0, 0.4);
+  padding: 10px 40px;
+  backdrop-filter: blur(5px);
+}
+
 .header-overlay {
   display: flex;
   gap: 40px;
